// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MobileFooter - Snapshots > matches snapshot for navigation links 1`] = `
<a
  aria-label="Home"
  class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/30"
  href="/home"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-house h-6 w-6"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
    />
    <path
      d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
    />
  </svg>
</a>
`;

exports[`MobileFooter - Snapshots > matches snapshot for profile link 1`] = `
<a
  aria-label="Profile"
  class="relative flex-shrink-0"
  href="/profile"
  id="footer-nav-profile-btn"
>
  <div
    class="h-12 w-12"
    data-testid="avatar"
  >
    <img
      alt="Profile"
      data-testid="avatar-image"
      src="https://i.pravatar.cc/150?img=68"
    />
    <div
      data-testid="avatar-fallback"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-user h-5 w-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
        />
        <circle
          cx="12"
          cy="7"
          r="4"
        />
      </svg>
    </div>
  </div>
</a>
`;

exports[`MobileFooter - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="flex justify-center pb-20 lg:hidden custom-footer"
>
  <div
    class="fixed bottom-0 z-40 flex w-full max-w-[380px] items-center justify-between overflow-x-auto bg-gradient-to-t from-background via-background/95 to-transparent px-3 py-4 sm:max-w-[600px] md:max-w-[720px]"
  >
    <a
      aria-label="Home"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/30"
      href="/home"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-house h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
        />
        <path
          d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
      </svg>
    </a>
    <a
      aria-label="Search"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/search"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
    </a>
    <a
      aria-label="Hot"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/hot"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-flame h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
        />
      </svg>
    </a>
    <a
      aria-label="Bookmarks"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/bookmarks"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-bookmark h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z"
        />
      </svg>
    </a>
    <a
      aria-label="Settings"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/settings"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-settings h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </a>
    <a
      aria-label="Profile"
      class="relative flex-shrink-0"
      href="/profile"
      id="footer-nav-profile-btn"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="Profile"
          data-testid="avatar-image"
          src="https://i.pravatar.cc/150?img=68"
        />
        <div
          data-testid="avatar-fallback"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`MobileFooter - Snapshots > matches snapshot with default props 1`] = `
<div
  class="flex justify-center pb-20 lg:hidden"
>
  <div
    class="fixed bottom-0 z-40 flex w-full max-w-[380px] items-center justify-between overflow-x-auto bg-gradient-to-t from-background via-background/95 to-transparent px-3 py-4 sm:max-w-[600px] md:max-w-[720px]"
  >
    <a
      aria-label="Home"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/30"
      href="/home"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-house h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
        />
        <path
          d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
      </svg>
    </a>
    <a
      aria-label="Search"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/search"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
    </a>
    <a
      aria-label="Hot"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/hot"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-flame h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
        />
      </svg>
    </a>
    <a
      aria-label="Bookmarks"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/bookmarks"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-bookmark h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z"
        />
      </svg>
    </a>
    <a
      aria-label="Settings"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/settings"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-settings h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </a>
    <a
      aria-label="Profile"
      class="relative flex-shrink-0"
      href="/profile"
      id="footer-nav-profile-btn"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="Profile"
          data-testid="avatar-image"
          src="https://i.pravatar.cc/150?img=68"
        />
        <div
          data-testid="avatar-fallback"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`MobileFooter - Snapshots > matches snapshot with different active path 1`] = `
<div
  class="flex justify-center pb-20 lg:hidden"
>
  <div
    class="fixed bottom-0 z-40 flex w-full max-w-[380px] items-center justify-between overflow-x-auto bg-gradient-to-t from-background via-background/95 to-transparent px-3 py-4 sm:max-w-[600px] md:max-w-[720px]"
  >
    <a
      aria-label="Home"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/home"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-house h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
        />
        <path
          d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
      </svg>
    </a>
    <a
      aria-label="Search"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/30"
      href="/search"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
    </a>
    <a
      aria-label="Hot"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/hot"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-flame h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"
        />
      </svg>
    </a>
    <a
      aria-label="Bookmarks"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/bookmarks"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-bookmark h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m19 21-7-4-7 4V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16z"
        />
      </svg>
    </a>
    <a
      aria-label="Settings"
      class="rounded-full p-3 backdrop-blur-sm transition-all bg-secondary/20 hover:bg-secondary/25"
      href="/settings"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-settings h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
        />
        <circle
          cx="12"
          cy="12"
          r="3"
        />
      </svg>
    </a>
    <a
      aria-label="Profile"
      class="relative flex-shrink-0"
      href="/profile"
      id="footer-nav-profile-btn"
    >
      <div
        class="h-12 w-12"
        data-testid="avatar"
      >
        <img
          alt="Profile"
          data-testid="avatar-image"
          src="https://i.pravatar.cc/150?img=68"
        />
        <div
          data-testid="avatar-fallback"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-user h-5 w-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
            />
            <circle
              cx="12"
              cy="7"
              r="4"
            />
          </svg>
        </div>
      </div>
    </a>
  </div>
</div>
`;
